# conditional_image_gen

./: .gitignore  AGENTS.md  Brainrot_Image_Gen_implementation_survey.md  README.md  findings.md  pyproject.toml  requirements.txt  research-log.md  research-state.yaml
configs/: default.yaml
doc/: detailed-design.md  high-level-design.md  performance-diagnosis.md  performance-log.md  problem-brief.md  prompt.md  proposal.md  quality-gates.md  repo-map.md  review-notes.md  test-plan.md
doc/tasks/: checkpointing.md  checkpoints-and-ema.md  classifier-free-guidance.md  cli-scripts.md  conditional-unet.md  conditioning.md  conditions.md  configuration-and-reproducibility.md  configuration.md  data-and-labels.md  data-loading.md  data-pipeline.md  diffusion-algorithm.md  diffusion-objective.md  diffusion.md  ema-and-checkpointing.md  ema.md  evaluation-and-tuning.md  evaluation.md  experiment-plan.md  fallback-experiment.md  (+13 more)
scripts/: evaluate.py  generate.py  package_submission.py  prepare_score_input.py  train.py  validate_submission.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_conditioning.py  test_conditions.py  test_config.py  test_data.py  test_data_conditions.py  test_diffusion.py  test_ema.py  test_ema_checkpoint.py  test_evaluate.py  test_evaluation.py  test_model.py  test_model_diffusion_guidance.py  test_package.py  test_packaging.py  test_sample.py  test_sampling.py  test_scripts.py  test_train_loop.py  test_training_sampling_generation.py  test_training_smoke.py  test_validate.py  test_validation.py  test_validation_evaluate_package.py
(+23 files in other folders)
