[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainrot-diffusion"
version = "0.1.0"
description = "From-scratch conditional DDPM/DDIM generator for HW6 Brainrot images"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
  "PyYAML",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["score.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
