[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brainrot-diffusion"
version = "0.1.0"
description = "From-scratch conditional DDPM/DDIM generator for HW6 Brainrot images"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
